k8s-deployments/01-manual/overlays/prod/replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 01-manual
spec:
  replicas: 2
