k8s-deployments/01-manual/overlays/prod/volumeMount.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manual
spec:
  template:
    spec:
      volumes:
        - name: configmap
          configMap:
            name: manual-prod
