k8s-deployments/01-manual/overlays/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: 01-manual
spec:
  ports:
    - name: http
      port: 80
      nodePort: 9002
      protocol: TCP
      targetPort: 80
